fix navbar alignment

--- a/src/componenets/Navbar/styles.scss
+++ b/src/componenets/Navbar/styles.scss
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 55px 50px;
+  padding-block: 55px;
 
   &-list {
     display: flex;
